--- a/src/components/charts/lineChart/lineChart.module.scss
+++ b/src/components/charts/lineChart/lineChart.module.scss
@@ -19,6 +19,13 @@ $ROW_Z_INDEX: 40;
   transform: translateY(-9px); // column 텍스트 높이 / 2
   text-align: right;
 
+  &.small {
+    .column {
+      font-size: 12px;
+      line-height: 16px;
+    }
+  }
+
   .columnWrap {
     width: 100%;
     height: 100%;
@@ -48,6 +55,11 @@ $ROW_Z_INDEX: 40;
   width: 100%;
   height: 100%;
   padding-left: 32px;
+
+  &.small {
+    padding-left: 12px;
+    padding-right: 12px;
+  }
 
   .tableArea {
     position: relative;
@@ -105,13 +117,17 @@ $ROW_Z_INDEX: 40;
         display: block;
         border-right: 2px solid;
 
+        &.small {
+          border-right: 1px solid;
+          right: 0;
+        }
+
         &.fadeIn {
           animation: fadeIn .2s cubic-bezier(0.4, 0, 0.2, 1);
           animation-fill-mode: forwards;
           opacity: 0;
         }
       }
-
 
       .dataBtn {
         position: absolute;
@@ -127,6 +143,21 @@ $ROW_Z_INDEX: 40;
         animation-fill-mode: forwards;
         opacity: 0;
 
+        &.small {
+          width: 6px;
+          height: 6px;
+          bottom: -3px;
+          right: -3px;
+
+          .tooltipArea {
+            left: 10px;
+          }
+
+          &::after {
+            content: none;
+          }
+        }
+
         &::after {
           display: block;
           width: 6px;
@@ -134,40 +165,34 @@ $ROW_Z_INDEX: 40;
           border-radius: 50%;
           content: '';
         }
+      }
 
-        .tooltipArea {
+      .tooltipArea {
+        position: absolute;
+        display: none;
+        left: 16px;
+        opacity: 0;
+
+        &::after {
+          content: '';
           position: absolute;
-          left: 100%;
-          display: none;
-          opacity: 0;
+          left: 50%;
+          transform: translate(-50%, -0.5px);
+          width: 0;
+          height: 0;
+          border-left: 4px solid transparent;
+          border-right: 4px solid transparent;
+          border-top: 7px solid;
+        }
 
-          &::after {
-            content: '';
-            position: absolute;
-            left: 50%;
-            transform: translate(-50%, -0.5px);
-            width: 0;
-            height: 0;
-            border-left: 4px solid transparent;
-            border-right: 4px solid transparent;
-            border-top: 7px solid;
-          }
+        &.top {
+          animation: moveBoxTop 1s cubic-bezier(0.4, 0, 0.2, 1) infinite;
+        }
 
-          &.top {
-            // 8px = 동그라미 반지름
-            transform: translate(calc(-50% - 8px), calc(-50% - 8px - 15px));
-            animation: moveBoxTop 1s cubic-bezier(0.4, 0, 0.2, 1) infinite;
-          }
-
-          &.left {
-            transform: translate(10px, 7.5px);
-          }
-
-          &.on {
-            display: block;
-            animation: fadeIn .7s cubic-bezier(0.4, 0, 0.2, 1), moveBoxTop 1s cubic-bezier(0.4, 0, 0.2, 1) infinite;
-            animation-fill-mode: forwards;
-          }
+        &.on {
+          display: block;
+          animation: fadeIn .7s cubic-bezier(0.4, 0, 0.2, 1), moveBoxTop 1s cubic-bezier(0.4, 0, 0.2, 1) infinite;
+          animation-fill-mode: forwards;
         }
       }
 
@@ -178,6 +203,10 @@ $ROW_Z_INDEX: 40;
 
         .dataBtn {
           background-color: $C_COOL_GRAY_40;
+
+          &.small {
+            background-color: $C_COOL_GRAY_60;
+          }
 
           &::after {
             background-color: $C_COOL_GRAY_80;
@@ -194,6 +223,15 @@ $ROW_Z_INDEX: 40;
           .dataBtn {
             background-color: $C_JOBDA_BLACK;
 
+            &.small {
+              width: 12px;
+              height: 12px;
+              background-color: $C_WHITE;
+              border: 3px solid $C_COOL_GRAY_90;
+              bottom: -6px;
+              right: -6px;
+            }
+
             &::after {
               background-color: $C_WHITE;
             }
@@ -208,6 +246,10 @@ $ROW_Z_INDEX: 40;
 
         .dataBtn {
           background-color: $C_GREEN_40;
+
+          &.small {
+            background-color: $C_GREEN_90;
+          }
 
           &::after {
             background-color: $C_GREEN_200;
@@ -224,6 +266,15 @@ $ROW_Z_INDEX: 40;
           .dataBtn {
             background-color: $C_GREEN_200;
 
+            &.small {
+              width: 12px;
+              height: 12px;
+              background-color: $C_WHITE;
+              border: 3px solid $C_GREEN_200;
+              bottom: -6px;
+              right: -6px;
+            }
+
             &::after {
               background-color: $C_WHITE;
             }
@@ -239,6 +290,10 @@ $ROW_Z_INDEX: 40;
         .dataBtn {
           background-color: $C_BLUE_40;
 
+          &.small {
+            background-color: $C_BLUE_60;
+          }
+
           &::after {
             background-color: $C_BLUE_100;
           }
@@ -253,6 +308,15 @@ $ROW_Z_INDEX: 40;
         &.on {
           .dataBtn {
             background-color: $C_BLUE_100;
+
+            &.small {
+              width: 12px;
+              height: 12px;
+              background-color: $C_WHITE;
+              border: 3px solid $C_BLUE_100;
+              bottom: -6px;
+              right: -6px;
+            }
 
             &::after {
               background-color: $C_WHITE;
@@ -284,24 +348,39 @@ $ROW_Z_INDEX: 40;
   }
 
   .row {
+    position: relative;
     display: flex;
     justify-content: center;
     align-items: center;
     width: 100%;
     height: 100%;
-    font-family: $F_PRETENDARD;
-    font-weight: 500;
-    font-size: 14px;
-    line-height: 18px;
-    letter-spacing: -0.01em;
-    color: $C_WARM_GRAY_70;
     text-align: center;
     transform: translateX(50%);
-    cursor: pointer;
+
+    .rowText {
+      position: absolute;
+      font-family: $F_PRETENDARD;
+      font-weight: 500;
+      font-size: 14px;
+      line-height: 18px;
+      letter-spacing: -0.01em;
+      color: $C_WARM_GRAY_70;
+    }
+
+    &.small {
+      .rowText {
+        font-size: 12px;
+        line-height: 16px;
+      }
+    }
 
     &.on {
       font-weight: 700;
       color: $C_JOBDA_BLACK;
+
+      &.small {
+        font-weight: 500;
+      }
     }
   }
 
