--- a/src/components/imageCrop/imageCrop.module.scss
+++ b/src/components/imageCrop/imageCrop.module.scss
@@ -1,15 +1,16 @@
 .wrap {
   position: relative;
-  display: block;
+  display: flex;
+  align-items: center;
+  justify-content: center;
   width: 100%;
   height: 100%;
-  background-color: #eee;
+  background-image: url('/nextjs/img/imageCrop/grid.png');
+  user-select: none;
 
   .cropArea {
+    position: relative;
     display: block;
-    width: 100%;
-    height: 100%;
-    background-image: url('/nextjs/img/imageCrop/grid.png');
   }
 }
 
@@ -20,13 +21,13 @@
   bottom: 0;
   left: 0;
   right: 0;
-  width: 100%;
-  height: 100%;
+  width: fit-content;
+  height: fit-content;
 
   .imgBox {
     display: block;
-    width: 100%;
-    height: 100%;
+    width: fit-content;
+    height: fit-content;
   }
 }
 
@@ -36,8 +37,6 @@
   bottom: 0;
   left: 0;
   right: 0;
-  width: 100%;
-  height: 100%;
   background-color: #000;
   opacity: .5;
   cursor: crosshair;
@@ -45,7 +44,9 @@
 }
 
 .cropBox {
-  position: relative;
+  position: absolute;
+  top: 0;
+  left: 0;
   display: block;
   outline: 1px solid #39f;
 
