--- a/src/components/charts/barChart/type03/type03.module.scss
+++ b/src/components/charts/barChart/type03/type03.module.scss
@@ -1,26 +1,26 @@
 @import '@styles/common.scss';
 
 .wrap {
-	position: relative;
-	display: flex;
-	flex-direction: column;
-	width: 100%;
-	height: 100%;
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  height: 100%;
 }
 
 .divider {
   position: relative;
   display: flex;
   width: 100%;
-	height: 100%;
-	border-bottom: 1px solid;
-	border-color: $C_COOL_GRAY_40;
+  height: 100%;
+  border-bottom: 1px solid;
+  border-color: $C_COOL_GRAY_40;
 
   .barWrap {
     position: relative;
     width: 100%;
 
-    .bar{
+    .bar {
       display: flex;
       align-items: center;
       justify-content: center;
@@ -33,6 +33,7 @@
       border-bottom: 0;
       border-radius: 8px 8px 0 0;
       transform: translate(-50%);
+      transition: .8s cubic-bezier(0.4, 0, 0.2, 1);
       z-index: 1;
 
       &.small {
@@ -145,8 +146,8 @@
     }
   }
 
-	&.on {
-		border-color: $C_COOL_GRAY_80;
+  &.on {
+    border-color: $C_COOL_GRAY_80;
 
     &::after {
       content: '0';
@@ -160,7 +161,7 @@
     }
 
     &.small {
-		  border-color: $C_COOL_GRAY_60;
+      border-color: $C_COOL_GRAY_60;
 
       &::after {
         right: calc(100% + 8px);
@@ -169,16 +170,16 @@
         line-height: 16px;
       }
     }
-	}
+  }
 }
 
 
 .rowWrap {
-	display: flex;
-	position: absolute;
-	bottom: 0;
-	width: 100%;
-	transform: translateY(calc(100% + 12px));
+  display: flex;
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  transform: translateY(calc(100% + 12px));
 
   &.small {
     transform: translateY(calc(100% + 8px));
@@ -190,9 +191,9 @@
     }
   }
 
-	.row {
-		width: 100%;
-		text-align: center;
+  .row {
+    width: 100%;
+    text-align: center;
     font-family: $F_PRETENDARD;
     font-size: 14px;
     line-height: 18px;
@@ -203,5 +204,5 @@
       font-weight: 700;
       color: $C_JOBDA_BLACK;
     }
-	}
+  }
 }
