--- a/src/components/charts/lineChart/lineChart.module.scss
+++ b/src/components/charts/lineChart/lineChart.module.scss
@@ -123,7 +123,7 @@ $ROW_Z_INDEX: 40;
         }
 
         &.fadeIn {
-          animation: fadeIn .2s cubic-bezier(0.4, 0, 0.2, 1);
+          animation: fadeIn 0.2s cubic-bezier(0.4, 0, 0.2, 1);
           animation-fill-mode: forwards;
           opacity: 0;
         }
@@ -139,7 +139,7 @@ $ROW_Z_INDEX: 40;
         width: 16px;
         height: 16px;
         border-radius: 50%;
-        animation: fadeIn .2s cubic-bezier(0.4, 0, 0.2, 1);
+        animation: fadeIn 0.2s cubic-bezier(0.4, 0, 0.2, 1);
         animation-fill-mode: forwards;
         opacity: 0;
 
@@ -191,7 +191,7 @@ $ROW_Z_INDEX: 40;
 
         &.on {
           display: block;
-          animation: fadeIn .7s cubic-bezier(0.4, 0, 0.2, 1), moveBoxTop 1s cubic-bezier(0.4, 0, 0.2, 1) infinite;
+          animation: fadeIn 0.7s cubic-bezier(0.4, 0, 0.2, 1), moveBoxTop 1s cubic-bezier(0.4, 0, 0.2, 1) infinite;
           animation-fill-mode: forwards;
         }
       }
@@ -360,7 +360,6 @@ $ROW_Z_INDEX: 40;
     .rowText {
       position: absolute;
       font-family: $F_PRETENDARD;
-      font-weight: 500;
       font-size: 14px;
       line-height: 18px;
       letter-spacing: -0.01em;
